removed email verification and auth, removed reset password
